SFDCProject/src/objects/Partner_Location__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Locations</relationshipLabel>
        <relationshipName>Partner_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Headquarters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headquarters</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Headquarters__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Solar Uni</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>